# PyRefactor

./: .coveragerc  .gitignore  .pylintrc  LICENSE.md  PyRefactor.spec  README.md  mypy.ini  pyproject.toml  pyrefactor.ini  pytest.ini  requirements-dev.txt
.github/workflows/: Build-Release-PYPI.yml
docs/: CONFIGURATION.md  RULES.md
scripts/: generate_file_version_info.py  pyinstaller_entry.py  verify.py
src/pyrefactor/: __init__.py  __main__.py  _version.py  analyzer.py  ast_visitor.py  config.py  json_reporter.py  models.py  reporter.py
src/pyrefactor/detectors/: __init__.py  boolean_logic.py  comparisons.py  complexity.py  context_manager.py  control_flow.py  dict_operations.py  duplication.py  loops.py  performance.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_ast_visitor.py  test_boolean_logic_detector.py  test_cli.py  test_comparisons_detector.py  test_complexity_detector.py  test_config.py  test_config_discovery.py  test_context_manager_detector.py  test_control_flow_detector.py  test_dict_operations_detector.py  test_duplication_detector.py  test_hypothesis_analyzer.py  test_hypothesis_ast_visitor.py  test_hypothesis_config.py  test_hypothesis_models.py  test_hypothesis_reporter.py  test_imports.py  test_integration.py  test_json_reporter.py  test_loops_detector.py  test_models.py  test_performance_detector.py  test_reporter.py  test_version.py
