[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrefactor"
version = "1.0.1"
description = "A Python refactoring and optimization linter"
authors = [{name = "tboy1337"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama",
]

[project.scripts]
pyrefactor = "pyrefactor.__main__:main"

[tool.setuptools.package-data]
pyrefactor = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

