[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrefactor"
dynamic = ["version"]
description = "A Python refactoring and optimization linter that analyzes code for performance issues, complexity problems, and opportunities for improvement"
authors = [{name = "tboy1337"}]
maintainers = [{name = "tboy1337"}]
readme = "README.md"
license = {text = "Commercial Restricted License (CRL)"}
requires-python = ">=3.9"
keywords = [
    "refactoring",
    "linter",
    "code-quality",
    "static-analysis",
    "ast",
    "optimization",
    "performance",
    "complexity",
    "code-analysis",
    "python-linter",
    "code-smell",
    "maintainability",
    "best-practices",
    "code-review",
    "cyclomatic-complexity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
    "Environment :: Console",
    "Natural Language :: English",
]
dependencies = [
    "colorama",
]

[project.urls]
Homepage = "https://github.com/tboy1337/PyRefactor"
Repository = "https://github.com/tboy1337/PyRefactor"
Issues = "https://github.com/tboy1337/PyRefactor/issues"
Changelog = "https://github.com/tboy1337/PyRefactor/releases"
Documentation = "https://github.com/tboy1337/PyRefactor#readme"

[project.scripts]
pyrefactor = "pyrefactor.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "pyrefactor.__version__"}

[tool.setuptools.package-data]
pyrefactor = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313', 'py314']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
